[package]
name = "ckb-auth-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
ckb2023 = ["ckb-std/ckb2023"]
dynamic-library-memory = []
dynamic-library-memory2 = []
dynamic-library-memory3 = []

[dependencies]
ckb-std = "0.14.3"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[target.'cfg(target_arch = "riscv64")'.dependencies]
hex = { version = "0.4.3", default-features = false, features = ["alloc"]}
blake2b-rs = "0.2.0"
