[package]
name = "ckb-auth-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dynamic-library-memory-200"]
ckb2023 = ["ckb-std/ckb2023"]

enable-dynamic-library = ["lazy_static", "ckb-std/dlopen-c", "ckb-std/ckb-types"]
dynamic-library-memory-200 = ["enable-dynamic-library"]
# enable these features when memory is not enough
dynamic-library-memory-400 = ["enable-dynamic-library"]
dynamic-library-memory-600 = ["enable-dynamic-library"]

[dependencies]
ckb-std = { version = "0.15", default-features = false }
lazy_static = { version = "1.4.0", optional = true, features = ["spin_no_std"] }

[target.'cfg(target_arch = "riscv64")'.dependencies]
hex = { version = "0.4.3", default-features = false, features = ["alloc"]}
blake2b-ref = "0.3.1"
