[package]
name = "auth_c_tests"
version = "0.1.0"
authors = ["joii <joii@cryptape.com"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-auth-rs = { path = "../../ckb-auth-rs", features = ["enable-dynamic-library"] }
ckb-crypto = "0.202"
ckb-error = "0.202"
ckb-hash = "0.202"
ckb-script = "0.202"
ckb-traits = "0.202"
ckb-types = "0.202"
ckb-chain-spec = "0.202"

ref_thread_local = "0.1.1"
rand = "0.6.5"
log = { version = "0.4.14", features = ["std"] }
hex = "0.4.3"
dyn-clone = "1.0.4"
tempdir = "0.3.7"
which = "4.4.0"
serde_json = "1.0.99"
lazy_static = "1.3.0"

base64 = "0.21.0"
secp256k1 = { version = "0.22.1", features = ["rand-std", "recovery"] }
bs58 = "0.5.0"
sha2 = "0.10.6"
sha3 = "0.9.1"
ripemd = "0.1.3"
p256 = { version = "^0.10.1" }
ed25519-dalek = "2.1.1"

base58-monero = "1.0.0"
monero = { version = "0.18.2", features = ["serde"] }
bitcoin = "0.30.0"
ripple-keypairs = "0.1.0"
