[package]
name = "auth_spawn_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-auth-rs = { path = "../../ckb-auth-rs", features = ["ckb2023"] }
molecule = { version = "0.7.5", default-features = false }
ckb-mock-tx-types = "0.112.0"
ckb-hash = "0.112.0"
ckb-jsonrpc-types = "0.112.0"
ckb-types = "0.112.0"
ckb-chain-spec = "0.112.0"
ckb-crypto = "0.112.0"

anyhow = "1.0.70"
lazy_static = "1.4.0"
serde_json = "1.0"
hex = "0.4.3"
regex = "1.10.4"
sha2 = "0.10.8"
ripemd = "0.1.3"

ripple-keypairs = "0.1.0"
