[package]
name = "ckb-auth-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-auth-rs = { path = "../../ckb-auth-rs" }
ckb-vm = { version = "0.24.0", features = [ "asm" ] }
ckb-types = "=0.111.0-rc2"
ckb-hash = "=0.111.0-rc2"
ckb-script = "=0.111.0-rc2"
clap = "4.3.2"
hex = "0.4.3"
lazy_static = "1.3.0"
bs58 = "0.5.0"
anyhow = "1.0.71"
base64 = "0.21.0"
serde_json = "1.0"
monero = { version = "0.18.2", features = ["serde"] }
base58-monero = "1.0.0"
mbedtls = "0.8.1"
sha2 = "0.10.6"
bitcoin = "0.30.0"