[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-testtool = "0.10"

auth_c_tests = { path = "../../../tests/auth-c-tests" }
ckb-auth-types = { path = "../../../ckb-auth-types" }
