[package]
name = "auth-rust-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["enable-dynamic-library"]
enable-dynamic-library = ["ckb-auth-rs/dynamic-library-memory-600"]

[dependencies]
ckb-std = { version = "0.18", default-features = false, features = ["allocator", "ckb-types", "dummy-atomic"] }
ckb-auth-rs = { path = "../../../../ckb-auth-rs", default-features = false }
log = { version = "0.4.17", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"]}
